2003-10-14  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/dec_v1.c, src/munged/enc_v1.c:
	  Fixed ia64 compiler warning that time_t "comparison is always false
	  due to limited range of data type".

2003-09-18  Chris Dunlap  <cdunlap@llnl.gov>

	* doc/credential_v1_format.txt, src/libcommon/munge_defs.h,
	  src/libmunge/ctx.c, src/libmunge/decode.c, src/libmunge/encode.c,
	  src/libmunge/munge.h, src/munge/munge.c, src/munge/unmunge.c,
	  src/munged/conf.c, src/munged/conf.h, src/munged/dec_v1.c,
	  src/munged/enc_v1.c: Added ttl back into credential (for replay).

	* src/libcommon/fd.c: Tweaked formatting.

2003-07-18  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_msg.c: Augmented err msgs once again.

2003-07-02  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_defs.h:
	  Increased MUNGE_SOCKET_BACKLOG from 64 to 128.

2003-06-27  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_msg.c:
	  Augmented err msgs with strerror() to track down failed fd_write_n().

2003-06-12  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/conf.c(create_conf):
	  Changed default value for got_clock_skew flag to true.

2003-06-03  Chris Dunlap  <cdunlap@llnl.gov>

	* src/libcommon/munge_msg.c(_munge_msg_recv):
	  Fixed bug with unexpected message length assert.

2003-05-30  Chris Dunlap  <cdunlap@llnl.gov>

	* doc/credential-v1-format: Added.

2003-05-29  Chris Dunlap  <cdunlap@llnl.gov>

	* libcommon/munge_defs.h: Increased credential's salt from 56b to 64b.

	* src/libcommon/munge_msg.h, src/libmunge/ctx.c, src/libmunge/ctx.h,
	  src/libmunge/decode.c, src/libmunge/encode.c, src/libmunge/munge.h,
	  src/munge/unmunge.c, src/munged/conf.c, src/munged/conf.h,
	  src/munged/dec_v1.c, src/munged/enc_v1.c, src/munged/munged.c:
	  Added IP address where cred was encoded into the credential.
	  This breaks backwards-compatibility with existing credentials.
	  Added MUNGE_OPT_ADDR4 enum (and tweaked the enum values).

2003-05-22  Chris Dunlap  <cdunlap@llnl.gov>
